fix(DataGrid): align actions menu to end

--- a/easy-ui-react/src/DataGrid/Cell.module.scss
+++ b/easy-ui-react/src/DataGrid/Cell.module.scss
@@ -64,6 +64,7 @@
 }
 
 .lastWithActions {
+  text-align: end;
   padding-left: design-token("space.0.5");
   padding-right: design-token("space.2");
   position: sticky;
